--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <!-- <h1>Responsive Flexbox Template</h1> -->
       <h3>Feel free to read our privacy policies and terms</h3>
       <div class="btns">
-        <a href="/docs/Privacy Policy.pdf" target="_blank" class="btn">Privacy policy</a>
-        <a href="/docs/Terms.pdf" target="_blank" class="btn">Terms</a>
+        <a href="./docs/PrivacyPolicy.pdf" target="_blank" class="btn">Privacy policy</a>
+        <a href="./docs/Terms.pdf" target="_blank" class="btn">Terms</a>
       </div>
     </section>
 
