new beta desing

--- a/index.html
+++ b/index.html
@@ -15,22 +15,28 @@
   <body>
     <header>
       <!-- <h2><a href="#">Website Logo</a></h2> -->
-      <!-- <nav>
-			<li><a href="#">Home</a></li>
-			<li><a href="#">Products</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Contacts</a></li>
-		</nav> -->
+      <nav>
+        <li><a href="./docs/PrivacyPolicy.pdf">Privacy policy</a></li>
+        <li><a href="./docs/Terms.pdf">Terms</a></li>
+      </nav>
     </header>
 
     <section class="hero">
       <div class="background-image" style="background-image: url(assets/img/background.9.png)"></div>
+      <h3>Download free form any store</h3>
+      <div class="btns">
+        <a href="https://apps.apple.com/us/app/id1534192966" target="_blank" class="btn">IOS</a>
+        <a href="https://play.google.com/store/apps/details?id=com.neryad.PocketList" target="_blank" class="btn"
+          >ANDROID</a
+        >
+      </div>
+
       <!-- <h1>Responsive Flexbox Template</h1> -->
-      <h3>Feel free to read our privacy policies and terms</h3>
+      <!-- <h3>Feel free to read our privacy policies and terms</h3>
       <div class="btns">
         <a href="./docs/PrivacyPolicy.pdf" target="_blank" class="btn">Privacy policy</a>
         <a href="./docs/Terms.pdf" target="_blank" class="btn">Terms</a>
-      </div>
+      </div> -->
     </section>
 
     <!-- <section class="our-work">
