--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
       <!-- <h2><a href="#">Website Logo</a></h2> -->
       <nav>
-        <li><a href="./docs/PrivacyPolicy.pdf">Privacy policy</a></li>
+        <li><a href="./docs/docs/PrivacyPolicy2024.pdf">Privacy policy</a></li>
         <li><a href="./docs/Terms.pdf">Terms</a></li>
       </nav>
     </header>
